--- a/style.css
+++ b/style.css
@@ -257,17 +257,17 @@ main{
 .newsletter_wrapper{
   border-radius: 20px;
   margin: 0 auto;
-  width: 80%;
+  width: 700px;
   background-color: #6f34dd;
   display: flex;
   flex-direction: row;
   
 }
 .newsletter_wrapper .newsletter_img{
-  width: 50%;
+  width: 350px;
 }
 .newsletter_wrapper.newsletter_img img{
-  width: 100%;
+  width: 350px;
 }
 .newsletter_wrapper .newsletter{
   display: flex;
@@ -277,10 +277,10 @@ main{
   margin: 15px;
 }
 .newsletter_wrapper .newsletter h1{
-  font-size: 3rem;
+  font-size: 2rem;
 }
 .newsletter_wrapper .newsletter form input[type=email]{
-  font-size: 1.3rem;
+  font-size: 1rem;
   padding: 7px;
   border-radius: 10px;
   border: 0px;
@@ -289,7 +289,7 @@ main{
   border-radius: 10px;
   color: #6f34dd;
   background-color: #f9f9f9;
-  font-size: 1.5rem;
+  font-size: 1rem;
   padding: 5px;
   border: none;
   cursor: pointer;
